--- a/Estilos/estilo.css
+++ b/Estilos/estilo.css
@@ -148,6 +148,9 @@ section {
 #servicos-titulo {
   color: #fff;
 }
+#corretores {
+  padding-top: 14px;
+}
 iframe {
   width: 100%;
   height: 300px;
@@ -160,6 +163,7 @@ footer {
   background-color: #fbec5d;
   margin-top: 10px;
   text-align: center;
+  border: 1px solid red;
 }
 footer li,
 a {
@@ -167,12 +171,16 @@ a {
   text-decoration: none;
   list-style: none;
   color: #111;
-  padding-bottom: 14px;
+}
+#footer-fim li {
+  padding-bottom: 24px;
 }
 #menu-hamburguer {
   cursor: pointer;
 }
 /*Medias Queries*/
+
+/*Tela até 320px*/
 @media (max-width: 320px) {
   #imagem-principal {
     display: flex;
@@ -181,6 +189,27 @@ a {
     margin: 7px auto;
   }
 }
+@media (max-width: 320px) {
+  nav a {
+    padding: 7px;
+    font-size: 1.2em;
+    font-family: fonte-principal;
+    color: #1d1d1d;
+    text-decoration: none;
+    font-weight: 600;
+  }
+}
+@media (max-width: 320px) {
+  #menu-hamburguer {
+    display: block;
+  }
+}
+@media (max-width: 320px) {
+  #imenu {
+    display: none;
+  }
+}
+/*Tela até 480px*/
 @media (max-width: 480px) {
   #imagem-principal {
     display: flex;
@@ -191,16 +220,6 @@ a {
     margin: 10px auto;
   }
 }
-@media (max-width: 320px) {
-  nav a {
-    padding: 7px;
-    font-size: 1.2em;
-    font-family: fonte-principal;
-    color: #1d1d1d;
-    text-decoration: none;
-    font-weight: 600;
-  }
-}
 @media (max-width: 480px) {
   nav a {
     padding: 7px;
@@ -211,17 +230,6 @@ a {
     font-weight: 600;
   }
 }
-
-@media (max-width: 320px) {
-  #menu-hamburguer {
-    display: block;
-  }
-}
-@media (max-width: 320px) {
-  #imenu {
-    display: none;
-  }
-}
 @media (max-width: 480px) {
   #menu-hamburguer {
     display: block;
@@ -230,5 +238,13 @@ a {
 @media (max-width: 480px) {
   #imenu {
     display: none;
+  }
+}
+/*Tela até 600px*/
+@media (max-width: 600px){
+  #imagem-principal{
+    display: flex;
+    width: 100vw;
+    margin: 7px auto;
   }
 }
