--- a/Estilos/estilo.css
+++ b/Estilos/estilo.css
@@ -1,5 +1,6 @@
 @charset "UTF-8";
 
+/*Fontes*/
 @font-face {
   font-family: fonte-principal;
   src: url("../Fontes/CaviarDreams_Italic.ttf");
@@ -246,5 +247,17 @@ a {
     display: flex;
     width: 100vw;
     margin: 7px auto;
+  }
+}
+@media (max-width: 600px){
+  .cabecalho-img{
+    display: flex;
+    width: 100vw;
+  }
+}
+@media (max-width: 600px){
+  .imagem-secundaria img{
+    display: flex;
+    width: 100vw;
   }
 }
