--- a/Estilos/estilo.css
+++ b/Estilos/estilo.css
@@ -242,22 +242,22 @@ a {
   }
 }
 /*Tela até 600px*/
-@media (max-width: 768px) {
+@media (min-width: 768px) {
   #imagem-principal {
     display: flex;
-    width: 100vw;
+    width: 100%;
     margin: 7px auto;
   }
 }
-@media (max-width: 768px) {
+@media (min-width: 768px) {
   .cabecalho-img {
     display: flex;
-    width: 100vw;
+    width: 100%;
   }
 }
-@media (max-width: 768px) {
+@media (min-width: 768px) {
   .imagem-secundaria img {
     display: flex;
-    width: 100vw;
+    width: 100%;
   }
 }
