--- a/Estilos/estilo.css
+++ b/Estilos/estilo.css
@@ -215,6 +215,16 @@ a {
 }
 /*Tela até 480px*/
 @media (max-width: 480px) {
+  body {
+    width: 100%;
+  }
+}
+@media (max-width: 480px) {
+  main {
+    width: 100%;
+  }
+}
+@media (max-width: 480px) {
   #imagem-principal {
     display: flex;
     justify-content: flex-end;
