--- a/Estilos/estilo.css
+++ b/Estilos/estilo.css
@@ -214,9 +214,20 @@ a {
   }
 }
 /*Tela até 480px*/
-@media (max-width: 480px) {
-  body {
-    width: 100%;
+@media only screen and (orientation: landscape) {
+  figure {
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    width: 100vw;
+  }
+}
+@media only screen and (orientation: landscape) {
+  figure img {
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    width: 100vw;
   }
 }
 @media (max-width: 480px) {
